syntax = "proto3";  // 定義要使用的 protocol buffer 版本

option go_package = "configuration/pb";
package configuration;

message GetConfRequest {
  string channelName = 1;
  string version = 2;
}

message GetConfResponse {
  uint32 statusCode = 1;
  string message = 2;
  bytes data = 3;
}

service ConfigurationService {
  // 取得channel設定檔
  rpc GetChannelConf(GetConfRequest) returns (GetConfResponse) {};
}